--- a/css/pages_css/homepage.css
+++ b/css/pages_css/homepage.css
@@ -53,7 +53,7 @@ body{
   75%{ background-image: url(../../images/home_images/home_img_4.jpg); }
 }
 
-.type_container{
+.type_containe{
   height: 220vh;
   width: 75%;
   display: flex;
@@ -61,7 +61,7 @@ body{
   align-items:center;
 }
 
-.type_container p{
+.type_containe p{
   text-align: justify;
   overflow: hidden;
   text-size-adjust: initial;
